--- a/package.json
+++ b/package.json
@@ -3,19 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
+    "babel-preset-es2015": "^6.24.1",
+    "enzyme": "^2.8.2",
+    "jest": "^20.0.4",
+    "lodash.some": "^4.6.0",
+    "lodash.uniqby": "^4.7.0",
+    "lodash.uniqueid": "^4.0.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.5.4",
-    "styled-components": "^2.1.0"
+    "react-tokenized-input": "^1.1.1",
+    "styled-components": "^2.1.0",
+    "validator": "^7.0.0",
+    "yarn": "^0.24.5"
   },
   "devDependencies": {
+    "babel-jest": "^20.0.3",
+    "babel-polyfill": "^6.23.0",
     "flow-bin": "^0.47.0",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "react-test-renderer": "^15.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "jest": "jest"
   }
 }
